objects/PMC_CPQ_BrazilDiscountApprovalThreshold__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_UpperThresholdLevel1__c</fullName>
        <description>This field hold upper threshold values less than this value will trigger approval rule</description>
        <label>Upper Threshold Level 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UpperThresholdLevel2__c</fullName>
        <label>Upper Threshold Level 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_UpperThresholdLevel3__c</fullName>
        <label>Upper Threshold Level 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Brazil Discount Approval Threshold</label>
    <pluralLabel>Brazil Discount Approval Thresholds</pluralLabel>
</CustomObject>